--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     		    <!-- end controls -->
     		    
     		    <!-- begin map -->
-    		    <div class="map" id="YMapsID"></div>
-    		                <script src="js/maps-test.js">
-    		                </script>
+    		    <div class="map" id="map"></div>   		                
     		    <!-- end map -->
             </div>
     		
