--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
     		        <form action="">
     		            
 
-    		            <label>Введите город... 
-                            <input type="text" disabled>
-                            <button type="submit">да</button>
+    		            <label> 
+                            <input type="text" disabled id="input" placeholder="Введите город...">
+                            <button type="submit" disabled>подтвердить</button>
+<!--
                             <button id="sp">
                             <img src="img/voice.png" alt="voice input"></button>
+-->
     		            </label>
 
     		            <input type="checkbox" id="check">
-    		            
+    		            <p>Текущий город:</p>
     		            <!-- begin current -->
     		            <div id="current"></div>
     		            <!-- end current -->
