--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     		            <label> 
                             <input type="text" disabled id="input" placeholder="Введите город...">
-                            <button type="submit" disabled>подтвердить</button>
+                            <button type="submit" id="submit" disabled>подтвердить</button>
 <!--
                             <button id="sp">
                             <img src="img/voice.png" alt="voice input"></button>
